--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 <a href="https://728.github.io" title="Recargar/pagina principal">
 <img src="https://raw.githubusercontent.com/728l/728l.github.io/main/Home.png" alt="https://github.com/" width="178.75" height="49.75" /> 
 </a>
-	<a href="https://728.github.io" title="Recargar/Reseñas de programación">
+	<a href="https://728l.github.io/Resenando-paginas-de-programacion/" title="Recargar/Reseñas de programación">
 <img src="https://raw.githubusercontent.com/728l/728l.github.io/main/Platzi.png" alt="https://github.com/" width="178.75" height="49.75" /> 
 </a>
-	<a href="https://728.github.io" title="Recargar/MI gamebanana">
-<img src="https://raw.githubusercontent.com/728l/728l.github.io/main/Platzi.png" alt="https://github.com/" width="178.75" height="49.75" /> 
+	<a href="https://728l.github.io/Channel/" title="Recargar/MI gamebanana">
+<img src="https://raw.githubusercontent.com/728l/728l.github.io/main/GB_Central.png" alt="https://github.com/" width="178.75" height="49.75" /> 
 </a>
+	<center>
   <h1>En construcción</h1>
+	</center>
 </body>
 </html>
